--- a/flower.html
+++ b/flower.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="main.css">
   <title>flowers</title>
 </head>
 
 <body class="container">
-  
+    <center class="bday"><h3>"Happy Birthday Hamza Maqbool"</h3>
+
+  <div class="main">
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
@@ -310,6 +315,6 @@
 
   <!-- script -->
   <script src="main.js"></script>
-
+</div>
 </body>
 </html>
