--- a/flower.html
+++ b/flower.html
@@ -12,8 +12,7 @@
 </head>
 
 <body class="container">
-    <center class="bday"><h3>"Happy Birthday Hamza Maqbool"</h3>
-
+    <center class="bday"><h3>"Happy Birthday Hamza Maqbool"</h3></center>
   <div class="main">
   <div class="night"></div>
   <div class="flowers">
