--- a/flower.html
+++ b/flower.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="container">
-    <center class="bday"><h3>"Happy Birthday Hamza Maqbool"</h3></center>
+    <center class="bday">"Happy Birthday Hamza Maqbool"</center>
   <div class="main">
   <div class="night"></div>
   <div class="flowers">
